--- a/mall-auth/pom.xml
+++ b/mall-auth/pom.xml
@@ -24,11 +24,11 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
 
         <!--nacos的依赖-->
         <dependency>
@@ -43,8 +43,8 @@
         </dependency>
 
 <!--        <dependency>-->
-<!--            <groupId>com.tuling</groupId>-->
-<!--            <artifactId>tulingmall-mbg</artifactId>-->
+<!--            <groupId>com.mall</groupId>-->
+<!--            <artifactId>mall-mbg</artifactId>-->
 <!--        </dependency>-->
 
         <dependency>
