修改逆向工程模板

--- a/pine-generator/src/main/resources/generator.properties
+++ b/pine-generator/src/main/resources/generator.properties
@@ -1,8 +1,10 @@
 #代码生成器，配置信息
 mainPath=pine-base
 #包名
-package=com.pine.offactive.modules
-moduleName=business
+package=com.mall.core
+moduleName=pms
+#座右铭
+motto=My code, I understand
 #作者
 author=Pine
 #Email
