--- a/mall-product/pom.xml
+++ b/mall-product/pom.xml
@@ -23,9 +23,20 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--spring-mvc的依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.mall</groupId>
             <artifactId>mall-core</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
