--- a/pine-generator/src/main/resources/application.yml
+++ b/pine-generator/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
     max-threads: 1000
     min-spare-threads: 30
   port: 8082
-  servlet:
-    context-path: /pine-generator
+#  servlet:
+#    context-path: /pine-generator
 
 # mysql
 spring:
@@ -15,7 +15,7 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://192.168.1.128:3306/pine_mall?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
-    password: root
+    password: pl,okmijn
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
