--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>pine_mall</name>
     <description>微服务商城</description>
+    <packaging>pom</packaging>
     <modules>
         <module>mall-auth</module>
         <module>mall-common</module>
