--- a/mall-auth/pom.xml
+++ b/mall-auth/pom.xml
@@ -41,10 +41,10 @@
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.mall</groupId>-->
-<!--            <artifactId>mall-mbg</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.mall</groupId>
+            <artifactId>mall-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
