--- a/mall-auth/src/main/resources/application.yml
+++ b/mall-auth/src/main/resources/application.yml
@@ -1,1 +1,19 @@
-
+server:
+  port: 8866
+spring:
+  datasource:
+    url: jdbc:mysql://192.168.1.128:3306/pine_auth?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: pine_auth
+    password: jDWxXRzzkXN6N2Jc
+    druid:
+      initial-size: 5 #连接池初始化大小
+      min-idle: 10 #最小空闲连接数
+      max-active: 20 #最大连接数
+      web-stat-filter:
+        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*" #不统计这些请求数据
+      stat-view-servlet: #访问监控网页的登录用户名和密码
+        login-username: druid
+        login-password: druid
+mybatis:
+  mapper-locations:
+    - classpath:/mapper/**/*Dao.xml
