--- a/mall-auth/src/main/resources/application.yml
+++ b/mall-auth/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8866
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.128:3306/pine_auth?useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: pine_auth
-    password: jDWxXRzzkXN6N2Jc
+    url: jdbc:mysql://192.168.2.128:3306/pine_mall?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: pine_mall
+    password: YiKbiN2iXJdxxfdT
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
