修改代码生成器，添加gateway和member服务

--- a/pine-generator/src/main/resources/generator.properties
+++ b/pine-generator/src/main/resources/generator.properties
@@ -1,8 +1,12 @@
 #代码生成器，配置信息
 mainPath=pine-base
-#包名
+#dao包名
 package=com.mall.core
 moduleName=ums
+
+#dao包名
+mvcPackage=com.mall
+mvcModuleName=member
 #座右铭
 motto=My code, I understand
 #作者
