--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>mall-auth</module>
         <module>mall-common</module>
         <module>mall-core</module>
+        <module>mall-member</module>
     </modules>
     <properties>
         <skipTests>true</skipTests>
