用户登录接口

--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
 mybatis:
   mapper-locations:
     - classpath:/mapper/**/*Dao.xml
+jwt:
+  tokenHeader: Authorization #JWT存储的请求头
+  secret: mall-portal-secret #JWT加解密使用的密钥
+  expiration: 604800 #JWT的超期限时间(60*60*24)
+  tokenHead: bearer #JWT负载中拿到开头
