--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://139.186.69.107:3306/pine_mall?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://192.168.1.128:3306/pine_mall?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: pine_mall
     password: YiKbiN2iXJdxxfdT
     druid:
@@ -14,6 +14,12 @@ spring:
       stat-view-servlet: #访问监控网页的登录用户名和密码
         login-username: druid
         login-password: druid
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.1.128
+  application:
+    name: mall-member
 mybatis:
   mapper-locations:
     - classpath:/mapper/**/*Dao.xml
