--- a/mall-auth/pom.xml
+++ b/mall-auth/pom.xml
@@ -29,11 +29,11 @@
         </dependency>
 
 
-        <!--nacos的依赖-->
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>-->
-<!--        </dependency>-->
+        <!--加入nacos的依赖-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
         <!--SpringSecurity的依赖-->
         <dependency>
