--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 server:
   port: 8081
 spring:
+  application:
+    name: mall-member
   datasource:
     url: jdbc:mysql://192.168.1.128:3306/pine_mall?useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: pine_mall
-    password: YiKbiN2iXJdxxfdT
+    username: root
+    password: pl,okmijn
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -18,8 +20,17 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.1.128
-  application:
-    name: mall-member
+  redis:
+    host: 192.168.1.128
+    port: 16379
+    database: 0
+    jedis:
+      pool:
+        max-active: 8 # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 8 # 连接池中的最大空闲连接
+        min-idle: 0 # 连接池中的最小空闲连接
+    timeout: 3000ms # 连接超时时间（毫秒）
 mybatis:
   mapper-locations:
     - classpath:/mapper/**/*Dao.xml
