--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -11,13 +11,13 @@ spring:
       discovery:
         locator:
           lower-case-service-id: true
-#          enabled: true
+          enabled: true
 #    sentinel:
 #      transport:
 #        dashboard: localhost:8080
 #        port: 8080
-#      # 服务启动直接建立心跳连接
-#      eager: true
+      # 服务启动直接建立心跳连接
+      eager: true
       routes:
         - id: mall-auth
           uri: lb://mall-authcenter
@@ -32,3 +32,7 @@ mall:
     shouldSkipUrls:
       - /oauth/**
       - /sso/**
+logging:
+  level:
+    com.mall.gateway: DEBUG
+
