--- a/mall-core/pom.xml
+++ b/mall-core/pom.xml
@@ -17,9 +17,14 @@
     </parent>
 
     <dependencies>
+
         <dependency>
             <groupId>com.pine</groupId>
             <artifactId>pine-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
 
