--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -2,18 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.pine</groupId>
+    <artifactId>mall-admin</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>mall-admin</name>
+    <description>商城管理后台</description>
 
     <parent>
         <groupId>com.pine</groupId>
         <artifactId>pine_mall</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
-    <groupId>com.pine</groupId>
-    <artifactId>mall-member</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>mall-member</name>
-    <description>会员中心</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,30 +21,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>com.pine</groupId>
+            <artifactId>mall-core</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!--redis依赖配置-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-
-        <!--加入nacos的依赖-->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.pine</groupId>
-            <artifactId>mall-core</artifactId>
         </dependency>
 
     </dependencies>
