--- a/pine-generator/src/main/resources/generator.properties
+++ b/pine-generator/src/main/resources/generator.properties
@@ -1,12 +1,12 @@
 #代码生成器，配置信息
 mainPath=pine-base
 #dao包名
-package=com.mall.core
-moduleName=ums
+package=com.pine.mall.core
+moduleName=pms
 
 #dao包名
-mvcPackage=com.mall
-mvcModuleName=member
+mvcPackage=com.pine.mall
+mvcModuleName=pms
 #座右铭
 motto=My code, I understand
 #作者
