模板是实体类类型date修改为LocalDateTime

--- a/pine-generator/src/main/resources/generator.properties
+++ b/pine-generator/src/main/resources/generator.properties
@@ -32,6 +32,6 @@ tinytext=String
 text=String
 mediumtext=String
 longtext=String
-date=Date
-datetime=Date
-timestamp=Date
+date=LocalDateTime
+datetime=LocalDateTime
+timestamp=LocalDateTime
